About section completed.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
       >
         <div class="hero-circle">
           <img src="assets/microphone.png" alt="" />
+          <p class="base">NEW</p>
         </div>
-        <h1 class="text-6xl py-10 font-extrabold text-[#1A0B2E]">TechWave</h1>
+        <h1 class="text-[3.7vw] py-10 font-extrabold text-[#ffff]">TechWave</h1>
         <div class="hero-btn mt-2.5">
           <button class="btn py-3 px-5 flex items-center gap-2">
             <img src="assets/spotify.png" alt="" srcset="" /> Listen on Spotify</button
@@ -54,5 +55,40 @@
         </div>
       </div>
     </header>
+    <section class="about">
+      <div class="container pt-12">
+        <h1 class="about-title text-white text-center font-bold">
+          About the Podcast
+        </h1>
+        <p class="common-p text-center">
+          TechWave is your go-to podcast for staying ahead in the fast-paced
+          world of technology. We break down complex topics into digestible
+          insights, explore productivity strategies that actually work, and
+          share stories of personal growth from industry leaders.
+        </p>
+        <p class="common-p text-center">
+          Join thousands of young professionals and tech enthusiasts who start
+          their day with TechWave.
+        </p>
+      </div>
+      <div class="about-info container">
+        <div class="info-card">
+          <h1>150K+</h1>
+          <p class="common-p text-center">MONTHLY LISTENERS</p>
+        </div>
+        <div class="info-card">
+          <h1>200+</h1>
+          <p class="common-p text-center">EPISODES PUBLISHED</p>
+        </div>
+        <div class="info-card">
+          <h1>4.9★</h1>
+          <p class="common-p text-center">AVERAGE RATING</p>
+        </div>
+        <div class="info-card">
+          <h1>50+</h1>
+          <p class="common-p text-center">INDUSRTY EXPERTS</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
