--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
         <h1 class="about-title text-white text-center font-bold">
           About the Podcast
         </h1>
-        <p class="common-p text-center">
+        <p class="common-p text-center py-2.5 px-[12.5vw]">
           TechWave is your go-to podcast for staying ahead in the fast-paced
           world of technology. We break down complex topics into digestible
           insights, explore productivity strategies that actually work, and
           share stories of personal growth from industry leaders.
         </p>
-        <p class="common-p text-center">
+        <p class="common-p text-center py-2.5 px-[12.5vw]">
           Join thousands of young professionals and tech enthusiasts who start
           their day with TechWave.
         </p>
@@ -87,6 +87,58 @@
         <div class="info-card">
           <h1>50+</h1>
           <p class="common-p text-center">INDUSRTY EXPERTS</p>
+        </div>
+      </div>
+    </section>
+    <section class="choose">
+      <div class="container">
+        <h1 class="choose-title text-center text-white font-bold text-[48px]">
+          Why Choose TechWave
+        </h1>
+        <div class="choose-cards">
+          <div class="choose-card" id="choose-card1">
+            <img src="./assets/headphone.png" alt="" />
+            <h3>Premium Audio Quality</h3>
+            <p>
+              Experience crystal-clear sound with professional-grade recording
+              equipment and expert audio engineering. Every episode is mastered
+              for optimal listening across all devices and platforms.
+            </p>
+          </div>
+          <div class="choose-card" id="choose-card2">
+            <img src="./assets/device.png" alt="" />
+            <h3>Mobile Friendly</h3>
+            <p>
+              Listen on the go with seamless mobile experience and offline
+              downloads.
+            </p>
+          </div>
+          <div class="choose-card" id="choose-card3">
+            <img src="./assets/location.png" alt="" />
+            <h3>Global Community</h3>
+            <p>
+              Connect with tech enthusiasts from over 120 countries worldwide.
+            </p>
+          </div>
+
+          <div class="choose-card" id="choose-card4">
+            <img src="./assets/interview.png" alt="" />
+            <h3>Exclusive Interviews</h3>
+            <p>
+              Get unprecedented access to industry titans, startup founders, and
+              tech visionaries. Our host secures exclusive conversations you
+              won't find anywhere else, diving deep into their journeys,
+              failures, and success strategies.
+            </p>
+          </div>
+          <div class="choose-card" id="choose-card5">
+            <img src="./assets/resource.png" alt="" />
+            <h3>Rich Resources</h3>
+            <p>
+              Access show notes, transcripts, and additional learning materials
+              for every episode.
+            </p>
+          </div>
         </div>
       </div>
     </section>
