Ready for PC/Laptop. continue to small screen responsive.

--- a/index.html
+++ b/index.html
@@ -57,10 +57,8 @@
     </header>
     <section class="about">
       <div class="container pt-12">
-        <h1 class="about-title text-white text-center font-bold">
-          About the Podcast
-        </h1>
-        <p class="common-p text-center py-2.5 px-[12.5vw]">
+        <h1 class="section-title">About the Podcast</h1>
+        <p class="common-p text-center pb-2.5 px-[12.5vw]">
           TechWave is your go-to podcast for staying ahead in the fast-paced
           world of technology. We break down complex topics into digestible
           insights, explore productivity strategies that actually work, and
@@ -92,9 +90,7 @@
     </section>
     <section class="choose">
       <div class="container">
-        <h1 class="choose-title text-center text-white font-bold text-[48px]">
-          Why Choose TechWave
-        </h1>
+        <h1 class="section-title">Why Choose TechWave</h1>
         <div class="choose-cards">
           <div class="choose-card" id="choose-card1">
             <img src="./assets/headphone.png" alt="" />
@@ -142,5 +138,135 @@
         </div>
       </div>
     </section>
+    <section class="feature">
+      <div class="container">
+        <h1 class="section-title">Featured Episodes</h1>
+        <div class="feature-contents">
+          <div class="feature-card">
+            <iframe
+              src="https://www.youtube.com/embed/oNtZnaocEkQ?si=T-1d0IhAD_UHxNjT&amp;start=20"
+              title="YouTube video player"
+              frameborder="0"
+              allow="
+                accelerometer;
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                gyroscope;
+                picture-in-picture;
+                web-share;
+              "
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+            <h3>The Future of AI in Everyday Life</h3>
+            <p>
+              Exploring how artificial intelligence is transforming our daily
+              routines and what to expect in the next decade.
+            </p>
+            <div class="clock">
+              <img src="./assets/clock.png" alt="" srcset="" /> 05 min
+            </div>
+          </div>
+          <div class="feature-card">
+            <iframe
+              src="https://www.youtube.com/embed/61eBFvUgIQY?si=WDw2KYGUG5eyxIQj&amp;start=18"
+              title="YouTube video player"
+              frameborder="0"
+              allow="
+                accelerometer;
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                gyroscope;
+                picture-in-picture;
+                web-share;
+              "
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+            <h3>The Future of AI in Everyday Life</h3>
+            <p>
+              Exploring how artificial intelligence is transforming our daily
+              routines and what to expect in the next decade.
+            </p>
+            <div class="clock">
+              <img src="./assets/clock.png" alt="" srcset="" /> 05 min
+            </div>
+          </div>
+          <div class="feature-card">
+            <iframe
+              src="https://www.youtube.com/embed/Ry1VYARRVxg?si=z9oOjmgC9zma9LsY&amp;start=4"
+              title="YouTube video player"
+              frameborder="0"
+              allow="
+                accelerometer;
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                gyroscope;
+                picture-in-picture;
+                web-share;
+              "
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+            <h3>The Future of AI in Everyday Life</h3>
+            <p>
+              Exploring how artificial intelligence is transforming our daily
+              routines and what to expect in the next decade.
+            </p>
+            <div class="clock">
+              <img src="./assets/clock.png" alt="" srcset="" /> 05 min
+            </div>
+          </div>
+        </div>
+      </div>
+      <section class="host">
+        <div class="container">
+          <h3 class="section-title">Meet the Host</h3>
+          <div class="host-card">
+            <img src="./assets/host.png" alt="" srcset="" />
+            <div class="content">
+              <h1>Alex Kumar</h1>
+              <p class="common-p">
+                Tech entrepreneur, productivity expert, and lifelong learner.
+                Alex has been in the tech industry for over 10 years, working
+                with startups and Fortune 500 companies. Through TechWave, Alex
+                shares insights from industry leaders and practical advice for
+                anyone looking to grow in tech.
+              </p>
+              <div class="host-imgs">
+                <div><img src="./assets/linkedin.png" alt="" /></div>
+                <div><img src="./assets/x.png" alt="" /></div>
+                <div><img src="./assets/instagram.png" alt="" /></div>
+                <div><img src="./assets/youtube.png" alt="" /></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </section>
+    <footer>
+      <div class="container">
+        <img src="./assets/logo.png" alt="" srcset="" />
+        <div class="social-links">
+          <div class="social-link">
+            <img src="./assets/spotify.png" alt="" srcset="" /> Spotify
+          </div>
+          <div class="social-link">
+            <img src="./assets/apple-podcast.png" alt="" srcset="" /> Apple
+            Podcasts
+          </div>
+          <div class="social-link">
+            <img src="./assets/youtube-podcast.png" alt="" srcset="" /> YouTube
+          </div>
+          <div class="social-link">
+            <img src="./assets/twitter.png" alt="" srcset="" /> Twitter
+          </div>
+        </div>
+      </div>
+      <p>&copy; 2026 TechWave Podcast. All rights reserved.</p>
+    </footer>
   </body>
 </html>
