Complete responsive and animation. fixed bg error

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       >
         <img src="assets/logo.png" alt="" srcset="" class="logo" />
         <div class="hamburger">
-          <img src="./assets/hamburger-menu.png" alt="" srcset="" />
+          <img src="assets/hamburger-menu.png" alt="" srcset="" />
         </div>
         <ul class="flex justify-between gap-8">
           <li><a href="">About</a></li>
@@ -104,7 +104,7 @@
         <h1 class="section-title">Why Choose TechWave</h1>
         <div class="choose-cards">
           <div class="choose-card" id="choose-card1">
-            <img src="./assets/headphone.png" alt="" />
+            <img src="assets/headphone.png" alt="" />
             <h3>Premium Audio Quality</h3>
             <p>
               Experience crystal-clear sound with professional-grade recording
@@ -113,7 +113,7 @@
             </p>
           </div>
           <div class="choose-card" id="choose-card2">
-            <img src="./assets/device.png" alt="" />
+            <img src="assets/device.png" alt="" />
             <h3>Mobile Friendly</h3>
             <p>
               Listen on the go with seamless mobile experience and offline
@@ -121,7 +121,7 @@
             </p>
           </div>
           <div class="choose-card" id="choose-card3">
-            <img src="./assets/location.png" alt="" />
+            <img src="assets/location.png" alt="" />
             <h3>Global Community</h3>
             <p>
               Connect with tech enthusiasts from over 120 countries worldwide.
@@ -129,7 +129,7 @@
           </div>
 
           <div class="choose-card" id="choose-card4">
-            <img src="./assets/interview.png" alt="" />
+            <img src="assets/interview.png" alt="" />
             <h3>Exclusive Interviews</h3>
             <p>
               Get unprecedented access to industry titans, startup founders, and
@@ -139,7 +139,7 @@
             </p>
           </div>
           <div class="choose-card" id="choose-card5">
-            <img src="./assets/resource.png" alt="" />
+            <img src="assets/resource.png" alt="" />
             <h3>Rich Resources</h3>
             <p>
               Access show notes, transcripts, and additional learning materials
